2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/CommandCategoryCodon.cs,
	  MonoDevelop.Components.Commands.ExtensionNodes/CommandCodon.cs:
	  Extension nodes don't need to be public.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.mdp: Updated project files. The order of extended
	  properties won't change anymore.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Before executing the
	  command bound to a shortcut, check if the command is enabled.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/LinkCommandEntry.cs: Moved PlatformService
	  to MD.Core.Gui. Removed old FileIconService class, which is now
	  implemented in PlatformService.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml: Bump add-in versions.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.DockToolbars/DockGrip.cs: Fix orientation of
	  toolbar grip. Fixes bug #346764.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Components.Commands/LinkCommandEntry.cs: Use the new RuntimeService
	  instead of Gnome.Url.Show.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, Makefile.am, MonoDevelop.Components.mdp: Directory
	  reorganization.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Components.mdp,
	  MonoDevelop.Components.Commands/CustomItem.cs,
	  MonoDevelop.Components.Commands/CommandManager.cs: Added new CustomItem
	  base class to be used by custom toolbar/menu items which need to be
	  aware of toolbar style changes.
	* MonoDevelop.Components.Commands/CustomMenuItem.cs: This class is internal.
	* MonoDevelop.Components.Commands/ICommandTargetVisitor.cs,
	  MonoDevelop.Components/GladeWidgetExtract.cs,
	  MonoDevelop.Components/FolderEntry.cs,